[package]
name = "lehibou_memory_game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = [] }  # Tu rempliras features plus tard
js-sys = "0.3.85"
getrandom = { version = "0.3", features = ["wasm_js"] }  # For random in WASM